[gd_scene load_steps=15 format=2]

[ext_resource path="res://Styles/UI.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Fonts/COMIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Hangar.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="Theme" id=5]
Panel/styles/panel = SubResource( 11 )

[sub_resource type="DynamicFont" id=9]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 62
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:margin_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:margin_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:margin_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:margin_bottom")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "ToEquipments"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1920, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "to_equipments"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:anchor_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:anchor_bottom")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "ToHome"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1920, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "to_home"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:anchor_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:anchor_bottom")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="Hangar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 52

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1900.0
margin_bottom = 85.0
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
modulate = Color( 0.870588, 0.00784314, 0.00784314, 1 )
margin_right = 150.0
margin_bottom = 85.0
rect_min_size = Vector2( 150, 85 )
icon = ExtResource( 3 )
flat = true
icon_align = 1
expand_icon = true

[node name="Hangar" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 154.0
margin_right = 1900.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Hangar"
align = 1
valign = 1
uppercase = true

[node name="EquipmentsButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 1700.0
margin_right = 1900.0
margin_bottom = 85.0
rect_min_size = Vector2( 200, 0 )
text = "Equipments"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 137.0
margin_right = 1900.0
margin_bottom = 746.0
size_flags_vertical = 3

[node name="ThumbnailPanel" type="Panel" parent="VBoxContainer/HBoxContainer"]
margin_right = 600.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )
size_flags_vertical = 0
theme = SubResource( 5 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/ThumbnailPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 604.0
margin_right = 1196.0
margin_bottom = 609.0
size_flags_horizontal = 3

[node name="Locked" type="Label" parent="VBoxContainer/HBoxContainer/CenterContainer"]
visible = false
margin_left = 120.0
margin_top = 241.0
margin_right = 472.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 9 )
text = "Locked"
align = 1
valign = 1
uppercase = true

[node name="StatsPanel" type="Panel" parent="VBoxContainer/HBoxContainer"]
margin_left = 1200.0
margin_right = 1900.0
margin_bottom = 600.0
rect_min_size = Vector2( 700, 600 )
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 0

[node name="StatsLabel" type="Label" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer"]
margin_right = 660.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
text = "Stats"
align = 1
valign = 1
uppercase = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer"]
margin_top = 85.0
margin_right = 660.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer"]
margin_top = 90.0
margin_right = 660.0
margin_bottom = 558.0
custom_constants/separation = 24

[node name="ShipName" type="Label" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer"]
margin_right = 660.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 6 )
text = "SHIP NAME"
align = 1
valign = 1
uppercase = true

[node name="Rarity" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 660.0
margin_bottom = 183.0
custom_constants/separation = 40

[node name="DurText" type="Label" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/Rarity"]
margin_right = 160.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "Rarity:"

[node name="DurValue" type="Label" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/Rarity"]
margin_left = 200.0
margin_right = 660.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
align = 2
valign = 1

[node name="Durability" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer"]
margin_top = 207.0
margin_right = 660.0
margin_bottom = 278.0
custom_constants/separation = 40

[node name="DurText" type="Label" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/Durability"]
margin_right = 249.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "Durability:"

[node name="DurValue" type="Label" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/Durability"]
margin_left = 289.0
margin_right = 660.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
align = 2
valign = 1

[node name="UpgradeLevel" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 660.0
margin_bottom = 373.0
custom_constants/separation = 40

[node name="ULText" type="Label" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/UpgradeLevel"]
margin_right = 462.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "Max Upgrade Level:"

[node name="ULValue" type="Label" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/UpgradeLevel"]
margin_left = 502.0
margin_right = 660.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
align = 2
valign = 1

[node name="Special" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer"]
margin_top = 397.0
margin_right = 660.0
margin_bottom = 468.0
custom_constants/separation = 40

[node name="SText" type="Label" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/Special"]
margin_right = 184.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "Special:"

[node name="SValue" type="Label" parent="VBoxContainer/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/Special"]
margin_left = 224.0
margin_right = 660.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
align = 2
valign = 1

[node name="ShipEquipButton" type="Button" parent="VBoxContainer"]
margin_left = 1770.0
margin_top = 798.0
margin_right = 1900.0
margin_bottom = 868.0
rect_min_size = Vector2( 130, 70 )
size_flags_horizontal = 8
text = "Equip"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 920.0
margin_right = 1900.0
margin_bottom = 1060.0
rect_min_size = Vector2( 0, 120 )
follow_focus = true
scroll_vertical_enabled = false

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1920.0
margin_bottom = 128.0
rect_min_size = Vector2( 1920, 120 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/CenterContainer"]
margin_left = 864.0
margin_right = 1056.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 120 )
custom_constants/separation = 18
alignment = 1

[node name="IconTemp" type="TextureButton" parent="VBoxContainer/ScrollContainer/CenterContainer/HBoxContainer"]
margin_right = 192.0
margin_bottom = 128.0
rect_min_size = Vector2( 192, 128 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/ToEquipments = SubResource( 10 )
anims/ToHome = SubResource( 8 )

[connection signal="button_up" from="VBoxContainer/HBoxContainer2/BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/EquipmentsButton" to="." method="_on_EquipmentsButton_button_up"]
[connection signal="button_up" from="VBoxContainer/ShipEquipButton" to="." method="_on_ShipEquipButton_button_up"]
